# cfdSCOPE

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Plot_test.py  README.md  requirements.txt  visualize.py
src/: Config.h  Grid.h  IO.h  Matrix.h  MiniCFD.cpp  Simulation.cpp  Simulation.h  Solver.h  Util.h  Vector.h  cfdSCOPE.cpp
tests/: CMakeLists.txt  integration_tests.cpp  io_basic_test.cpp  lingalg_basics_tests.cpp  solver_tests.cpp  trilerp_tests.cpp
tests/resources/: sample_io  velocity_snapshot.txt
tests/utils/: generte_cg_testcase.jl
